[package]
name = "joycon2click"
version = "0.2.0"
edition = "2021"
authors= ["Michaël Scherer"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["hardening"]
hardening = ["seccomp"]
seccomp = ["dep:seccompiler"]
landlock = ["dep:landlock"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
evdev = { version = "*" }

nix = { version = "*", features = ['user'] }
netlink-sys = "*"
kobject-uevent = "*"
clap = { version = "*", default-features = false, features = ["derive","std","help","usage","error-context"] }
seccompiler = { version = "*", default-features = false, optional = true}
landlock = { version = "*", default-features = false, optional = true}
