[package]
name = "joycon2click"
version = "0.3.0"
edition = "2024"
authors= ["Michaël Scherer"]

[features]
default = []
seccomp = ["dep:seccompiler", "sandbox"]
landlock = ["dep:landlock", "sandbox"]
sandbox = []

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
evdev = { version = "*" }

nix = { version = "*", features = ['user','process'] }
netlink-sys = "*"
kobject-uevent = "*"
clap = { version = "*", default-features = false, features = ["derive","std","help","usage","error-context"] }
seccompiler = { version = "*", default-features = false, optional = true}
landlock = { version = "*", default-features = false, optional = true}
